реализация BookDetailsActivity.kt

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -43,4 +43,8 @@
         libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
         vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
     </string>
+    <string name="status_planned">В планах</string>
+    <string name="status_reading">Читаю</string>
+    <string name="status_finished">Прочитано</string>
+
 </resources>
